--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ bleach==1.4.3
 celery==3.1.23
 certifi==2016.2.28
 configparser==3.5.0
+contextlib2==0.5.4
 Django==1.9.7
 django-allauth==0.25.2
 django-bootstrap-pagination==1.6.1
@@ -44,6 +45,7 @@ PyJWT==1.4.0
 python-http-client==1.2.3
 python-openid==2.2.5
 pytz==2016.4
+raven==5.27.1
 redis==2.10.5
 requests==2.10.0
 requests-oauthlib==0.7.0
