--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,11 @@ celery==3.1.23
 certifi==2016.2.28
 configparser==3.5.0
 contextlib2==0.5.4
+coverage==4.0.2
 Django==1.9.7
 django-allauth==0.25.2
 django-bootstrap-pagination==1.6.1
+django-easy-timezones==0.7.0
 django-forms-bootstrap==3.0.1
 django-guardian==1.4.5
 django-markdown==0.8.4
@@ -28,7 +30,7 @@ geoip2==2.4.0
 gevent==1.1.2
 greenlet==0.4.10
 html5lib==0.9999999
-ipaddress==1.0.17
+ipaddress==1.0.14
 isort==4.2.5
 jsonfield==1.0.3
 kombu==3.0.35
@@ -41,10 +43,11 @@ oauthlib==2.0.0
 phonenumberslite==7.4.4
 Pillow==3.3.1
 psycopg2==2.6.2
+pygeoip==0.3.2
 PyJWT==1.4.0
 python-http-client==1.2.3
 python-openid==2.2.5
-pytz==2016.4
+pytz==2015.7
 raven==5.27.1
 redis==2.10.5
 requests==2.10.0
