--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ django-markdown==0.8.4
 django-markdown-deux==1.0.5
 django-markdownx==1.6.3
 django-phonenumber-field==1.1.0
+django-recaptcha2==1.0.0
 django-redis-cache==1.6.5
 django-versatileimagefield==1.5
 django-websocket-redis==0.4.6
