--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,31 @@
 amqp==1.4.9
 anyjson==0.3.3
+asgi-redis==0.14.1
+asgiref==0.14.0
 astroid==1.4.8
+autobahn==0.16.0
 Babel==2.3.4
 backports.functools-lru-cache==1.2.1
+backports.shutil-get-terminal-size==1.0.0
 backports.ssl-match-hostname==3.5.0.1
 billiard==3.3.0.23
 bleach==1.4.3
 celery==3.1.23
 certifi==2016.2.28
+channels==0.17.3
 configparser==3.5.0
 contextlib2==0.5.4
 coverage==4.0.2
+daphne==0.15.0
+decorator==4.0.10
 Django==1.9.7
 django-allauth==0.25.2
 django-bootstrap-pagination==1.6.1
+django-ckeditor==5.1.1
 django-easy-timezones==0.7.0
+django-filebrowser==3.7.2
 django-forms-bootstrap==3.0.1
+django-grappelli==2.8.2
 django-guardian==1.4.5
 django-markdown==0.8.4
 django-markdown-deux==1.0.5
@@ -23,8 +33,10 @@ django-markdownx==1.6.3
 django-phonenumber-field==1.1.0
 django-recaptcha2==1.0.0
 django-redis-cache==1.6.5
+django-tinymce==2.4.0
 django-versatileimagefield==1.5
 django-websocket-redis==0.4.6
+enum34==1.1.6
 flower==0.9.1
 futures==3.0.5
 geoip2==2.4.0
@@ -32,6 +44,8 @@ gevent==1.1.2
 greenlet==0.4.10
 html5lib==0.9999999
 ipaddress==1.0.14
+ipython==5.1.0
+ipython-genutils==0.1.0
 isort==4.2.5
 jsonfield==1.0.3
 kombu==3.0.35
@@ -40,11 +54,19 @@ Markdown==2.6.6
 markdown2==2.3.1
 maxminddb==1.2.1
 mccabe==0.5.2
+msgpack-python==0.4.8
 oauthlib==2.0.0
+pathlib2==2.1.0
+pexpect==4.2.1
 phonenumberslite==7.4.4
+pickleshare==0.7.4
 Pillow==3.3.1
+prompt-toolkit==1.0.8
 psycopg2==2.6.2
+ptyprocess==0.5.1
+pyenchant==1.6.8
 pygeoip==0.3.2
+Pygments==2.1.3
 PyJWT==1.4.0
 python-http-client==1.2.3
 python-openid==2.2.5
@@ -55,8 +77,14 @@ requests==2.10.0
 requests-oauthlib==0.7.0
 sendgrid==2.2.1
 sendgrid-django==2.0.0
+simplegeneric==0.8.1
 six==1.10.0
 smtpapi==0.3.1
 tornado==4.2
+traitlets==4.3.1
 tweepy==3.5.0
+Twisted==16.4.1
+txaio==2.5.1
+wcwidth==0.1.7
 wrapt==1.10.8
+zope.interface==4.3.2
