--- a/requirements.txt
+++ b/requirements.txt
@@ -20,20 +20,24 @@ daphne==0.15.0
 decorator==4.0.10
 Django==1.9.7
 django-allauth==0.25.2
+django-appconf==1.0.2
 django-bootstrap-pagination==1.6.1
 django-ckeditor==5.1.1
 django-easy-timezones==0.7.0
 django-filebrowser==3.7.2
+django-flat-responsive==1.0.0
 django-forms-bootstrap==3.0.1
 django-grappelli==2.8.2
 django-guardian==1.4.5
 django-markdown==0.8.4
 django-markdown-deux==1.0.5
 django-markdownx==1.6.3
+django-object-actions==0.8.2
 django-phonenumber-field==1.1.0
 django-recaptcha2==1.0.0
 django-redis-cache==1.6.5
 django-tinymce==2.4.0
+django-user-accounts==2.0.0
 django-versatileimagefield==1.5
 django-websocket-redis==0.4.6
 enum34==1.1.6
@@ -43,9 +47,11 @@ geoip2==2.4.0
 gevent==1.1.2
 greenlet==0.4.10
 html5lib==0.9999999
+httplib2==0.9.2
 ipaddress==1.0.14
 ipython==5.1.0
 ipython-genutils==0.1.0
+iso3166==0.7
 isort==4.2.5
 jsonfield==1.0.3
 kombu==3.0.35
@@ -82,6 +88,7 @@ smtpapi==0.3.1
 tornado==4.2
 traitlets==4.3.1
 tweepy==3.5.0
+twilio==5.6.0
 Twisted==16.4.1
 txaio==2.5.1
 wcwidth==0.1.7
