--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ django-object-actions==0.8.2
 django-phonenumber-field==1.1.0
 django-recaptcha2==1.0.0
 django-redis-cache==1.6.5
+django-simple-history==1.8.1
 django-tinymce==2.4.0
 django-user-accounts==2.0.0
 django-versatileimagefield==1.5
