--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Babel==2.3.4
 backports.functools-lru-cache==1.2.1
 backports.shutil-get-terminal-size==1.0.0
 backports.ssl-match-hostname==3.5.0.1
+beautifulsoup4==4.5.1
 billiard==3.3.0.23
 bleach==1.4.3
 celery==3.1.23
