--- a/requirements.txt
+++ b/requirements.txt
@@ -68,6 +68,7 @@ pathlib2==2.1.0
 pexpect==4.2.1
 phonenumberslite==7.4.4
 pickleshare==0.7.4
+piexif==1.0.8
 Pillow==3.3.1
 prompt-toolkit==1.0.8
 psycopg2==2.6.2
