--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,9 @@ bleach==1.4.3
 celery==3.1.23
 certifi==2016.2.28
 channels==0.17.3
+chaussette==1.3.0
+circus==0.14.0
+circus-web==1.0.0
 configparser==3.5.0
 contextlib2==0.5.4
 coverage==4.0.2
@@ -50,6 +53,7 @@ gevent==1.1.2
 greenlet==0.4.10
 html5lib==0.9999999
 httplib2==0.9.2
+iowait==0.2
 ipaddress==1.0.14
 ipython==5.1.0
 ipython-genutils==0.1.0
@@ -58,8 +62,10 @@ isort==4.2.5
 jsonfield==1.0.3
 kombu==3.0.35
 lazy-object-proxy==1.2.2
+Mako==1.0.6
 Markdown==2.6.6
 markdown2==2.3.1
+MarkupSafe==0.23
 maxminddb==1.2.1
 mccabe==0.5.2
 msgpack-python==0.4.8
@@ -71,6 +77,7 @@ pickleshare==0.7.4
 piexif==1.0.8
 Pillow==3.3.1
 prompt-toolkit==1.0.8
+psutil==5.0.1
 psycopg2==2.6.2
 ptyprocess==0.5.1
 pygeoip==0.3.2
@@ -79,6 +86,7 @@ PyJWT==1.4.0
 python-http-client==1.2.3
 python-openid==2.2.5
 pytz==2015.7
+pyzmq==16.0.2
 raven==5.27.1
 redis==2.10.5
 requests==2.10.0
@@ -86,8 +94,11 @@ requests-oauthlib==0.7.0
 sendgrid==2.2.1
 sendgrid-django==2.0.0
 simplegeneric==0.8.1
+simplejson==3.10.0
 six==1.10.0
 smtpapi==0.3.1
+tomako==0.1.0.post1
+TornadIO2==0.0.3
 tornado==4.2
 traitlets==4.3.1
 tweepy==3.5.0
