--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ django-appconf==1.0.2
 django-bootstrap-pagination==1.6.1
 django-ckeditor==5.1.1
 django-easy-timezones==0.7.0
+django-el-pagination==3.0.1
 django-filebrowser==3.7.2
 django-flat-responsive==1.0.0
 django-forms-bootstrap==3.0.1
@@ -105,6 +106,7 @@ tweepy==3.5.0
 twilio==5.6.0
 Twisted==16.4.1
 txaio==2.5.1
+unicodecsv==0.14.1
 wcwidth==0.1.7
 wrapt==1.10.8
 zope.interface==4.3.2
