--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ django-allauth==0.25.2
 django-appconf==1.0.2
 django-bootstrap-pagination==1.6.1
 django-ckeditor==5.1.1
+django-compressor==2.1
 django-easy-timezones==0.7.0
 django-el-pagination==3.0.1
 django-filebrowser==3.7.2
@@ -89,9 +90,11 @@ python-openid==2.2.5
 pytz==2015.7
 pyzmq==16.0.2
 raven==5.27.1
+rcssmin==1.0.6
 redis==2.10.5
 requests==2.10.0
 requests-oauthlib==0.7.0
+rjsmin==1.0.12
 sendgrid==2.2.1
 sendgrid-django==2.0.0
 simplegeneric==0.8.1
@@ -106,6 +109,7 @@ tweepy==3.5.0
 twilio==5.6.0
 Twisted==16.4.1
 txaio==2.5.1
+unicodecsv==0.14.1
 wcwidth==0.1.7
 wrapt==1.10.8
 zope.interface==4.3.2
