--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ django-ckeditor==5.1.1
 django-compressor==2.1
 django-easy-timezones==0.7.0
 django-el-pagination==3.0.1
+django-extensions==1.7.6
 django-filebrowser==3.7.2
 django-flat-responsive==1.0.0
 django-forms-bootstrap==3.0.1
@@ -84,6 +85,7 @@ psycopg2==2.6.2
 ptyprocess==0.5.1
 pygeoip==0.3.2
 Pygments==2.1.3
+pygraphviz==1.3.1
 PyJWT==1.4.0
 python-http-client==1.2.3
 python-openid==2.2.5
@@ -101,6 +103,7 @@ simplegeneric==0.8.1
 simplejson==3.10.0
 six==1.10.0
 smtpapi==0.3.1
+stripe==1.46.0
 tomako==0.1.0.post1
 TornadIO2==0.0.3
 tornado==4.2
