--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ django-appconf==1.0.2
 django-bootstrap-pagination==1.6.1
 django-ckeditor==5.1.1
 django-compressor==2.1
+django-countries==4.0
 django-easy-timezones==0.7.0
 django-el-pagination==3.0.1
 django-extensions==1.7.6
