--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,120 @@
-appdirs==1.4.0
-astroid==1.4.9
-autopep8==1.2.4
-backports.functools-lru-cache==1.3
+amqp==1.4.9
+anyjson==0.3.3
+asgi-redis==0.14.1
+asgiref==0.14.0
+astroid==1.4.8
+autobahn==0.16.0
+Babel==2.3.4
+backports.functools-lru-cache==1.2.1
 backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4==4.4.1
-blindspin==2.0.1
-boto==2.38.0
-chardet==2.3.0
-click==6.7
-click-completion==0.2.1
-colorama==0.3.7
+backports.ssl-match-hostname==3.5.0.1
+beautifulsoup4==4.5.1
+billiard==3.3.0.23
+bleach==1.4.3
+celery==3.1.23
+certifi==2016.2.28
+channels==0.17.3
+chaussette==1.3.0
+circus==0.14.0
+circus-web==1.0.0
 configparser==3.5.0
-crayons==0.1.2
-cryptography==1.2.3
-decorator==4.0.6
-delegator.py==0.0.8
-duplicity==0.7.6
-enum34==1.1.2
-google-api-python-client==1.6.2
-google-auth==0.7.0
-google-auth-httplib2==0.0.2
-google-cloud-core==0.22.1
-google-cloud-translate==0.22.0
-googleapis-common-protos==1.5.2
-gyp==0.1
-html5lib==0.999
-httplib2==0.10.3
-idna==2.0
-ipaddress==1.0.16
-ipython==2.4.1
+contextlib2==0.5.4
+coverage==4.0.2
+daphne==0.15.0
+decorator==4.0.10
+Django==1.9.7
+django-allauth==0.25.2
+django-appconf==1.0.2
+django-bootstrap-pagination==1.6.1
+django-ckeditor==5.1.1
+django-compressor==2.1
+django-countries==4.0
+django-easy-timezones==0.7.0
+django-el-pagination==3.0.1
+django-extensions==1.7.6
+django-filebrowser==3.7.2
+django-flat-responsive==1.0.0
+django-forms-bootstrap==3.0.1
+django-grappelli==2.8.2
+django-guardian==1.4.5
+django-markdown==0.8.4
+django-markdown-deux==1.0.5
+django-markdownx==1.6.3
+django-object-actions==0.8.2
+django-phonenumber-field==1.1.0
+django-recaptcha2==1.0.0
+django-redis-cache==1.6.5
+django-simple-history==1.8.1
+django-tinymce==2.4.0
+django-user-accounts==2.0.0
+django-versatileimagefield==1.5
+django-websocket-redis==0.4.6
+enum34==1.1.6
+flower==0.9.1
+futures==3.0.5
+geoip2==2.4.0
+gevent==1.1.2
+greenlet==0.4.10
+html5lib==0.9999999
+httplib2==0.9.2
+iowait==0.2
+ipaddress==1.0.14
+ipython==5.1.0
+ipython-genutils==0.1.0
+iso3166==0.7
 isort==4.2.5
-Jinja2==2.8
+jsonfield==1.0.3
+kombu==3.0.35
 lazy-object-proxy==1.2.2
-lockfile==0.12.2
-lxml==3.5.0
+Mako==1.0.6
+Markdown==2.6.6
+markdown2==2.3.1
 MarkupSafe==0.23
-mccabe==0.6.1
-ndg-httpsclient==0.4.0
-numpy==1.11.0
-oauth2client==4.0.0
-packaging==16.8
-parse==1.8.0
-pathlib==1.0.1
-pbr==1.10.0
-pep8==1.7.0
-pew==0.1.26
-pexpect==4.0.1
-pipenv==3.4.2
-pipfile==0.0.1
-protobuf==3.2.0
-psutil==5.1.3
-ptyprocess==0.5
-pyasn1==0.2.2
-pyasn1-modules==0.0.8
-pycodestyle==2.2.0
-pycurl==7.43.0
-pygobject==3.20.0
-pylint==1.6.5
-PyMySQL==0.7.2
-pyOpenSSL==0.15.1
-pyparsing==2.1.10
-python-cloudfiles==1.7.10
-pythonz-bd==1.11.4
-pyxdg==0.25
-pyzmq==15.2.0
-requests==2.9.1
-requirements-parser==0.1.0
-rsa==3.4.2
-shutilwhich==1.1.0
+maxminddb==1.2.1
+mccabe==0.5.2
+msgpack-python==0.4.8
+oauthlib==2.0.0
+pathlib2==2.1.0
+pexpect==4.2.1
+phonenumberslite==7.4.4
+pickleshare==0.7.4
+piexif==1.0.8
+Pillow==3.3.1
+prompt-toolkit==1.0.8
+psutil==5.0.1
+psycopg2==2.6.2
+ptyprocess==0.5.1
+pygeoip==0.3.2
+Pygments==2.1.3
+pygraphviz==1.3.1
+PyJWT==1.4.0
+python-bitcoinrpc==1.0
+python-http-client==1.2.3
+python-openid==2.2.5
+pytz==2015.7
+pyzmq==16.0.2
+raven==5.27.1
+rcssmin==1.0.6
+redis==2.10.5
+requests==2.10.0
+requests-oauthlib==0.7.0
+rjsmin==1.0.12
+sendgrid==2.2.1
+sendgrid-django==2.0.0
 simplegeneric==0.8.1
+simplejson==3.10.0
 six==1.10.0
-stevedore==1.19.1
-toml==0.9.2
-tornado==4.2.1
+smtpapi==0.3.1
+stripe==1.46.0
+tomako==0.1.0.post1
+TornadIO2==0.0.3
+tornado==4.2
+traitlets==4.3.1
+tweepy==3.5.0
+twilio==5.6.0
+Twisted==16.4.1
+txaio==2.5.1
 unicodecsv==0.14.1
-Unidecode==0.4.20
-uritemplate==3.0.0
-urllib3==1.13.1
-vboxapi==1.0
-virtualenv==15.1.0
-virtualenv-clone==0.2.6
-virtualenvwrapper==4.7.2
+wcwidth==0.1.7
 wrapt==1.10.8
+zope.interface==4.3.2
