--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cookie-parser": "^1.4.3",
     "css-loader": "0.28.1",
     "debug": "2.6.6",
+    "emoji-mart": "^2.3.0",
     "express": "^4.14.0",
     "express-session": "1.15.2",
     "express-useragent": "^1.0.7",
