--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-router-redux": "^4.0.8",
     "react-swipeable-views": "^0.12.2",
     "react-tap-event-plugin": "^2.0.1",
+    "react-websocket": "^2.0.0",
     "redbox-react": "1.3.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
