--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-bootstrap": "0.31.0",
     "react-dom": "15.5.4",
     "react-helmet": "5.0.3",
+    "react-linkify": "^0.2.1",
     "react-redux": "5.0.4",
     "react-router": "3.0.5",
     "react-router-redux": "^4.0.8",
