--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-addons-shallow-compare": "15.5.2",
     "react-bootstrap": "0.31.0",
     "react-dom": "15.5.4",
+    "react-dropzone": "^4.2.3",
     "react-helmet": "5.0.3",
     "react-linkify": "^0.2.1",
     "react-notification-system": "^0.2.16",
