--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-redux": "5.0.4",
     "react-router": "3.0.5",
     "react-router-redux": "^4.0.8",
+    "react-swipeable": "^4.2.0",
     "react-swipeable-views": "^0.12.2",
     "react-tap-event-plugin": "^2.0.1",
     "react-timeago": "^3.4.3",
