--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react": "15.5.4",
     "react-addons-shallow-compare": "15.5.2",
     "react-bootstrap": "0.31.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "15.5.4",
     "react-dropzone": "^4.2.3",
     "react-helmet": "5.0.3",
