--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-dropzone": "^4.2.3",
     "react-helmet": "5.0.3",
     "react-linkify": "^0.2.1",
+    "react-mde": "^4.0.3",
     "react-notification-system": "^0.2.16",
     "react-redux": "5.0.4",
     "react-router": "3.0.5",
@@ -85,6 +86,7 @@
     "run-sequence": "^1.2.2",
     "rupture": "^0.6.1",
     "serve-favicon": "2.4.2",
+    "showdown": "^1.8.6",
     "style-loader": "0.17.0",
     "stylus": "^0.54.5",
     "stylus-loader": "3.0.1",
