Added proper Pipfile

--- a/Pipfile
+++ b/Pipfile
@@ -4,196 +4,141 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-amqp = "==1.4.9"
-anyjson = "==0.3.3"
-asgi-redis = "==0.14.1"
-asgiref = "==0.14.0"
-<<<<<<< HEAD
-astroid = "==1.5.3"
-autobahn = "==0.16.0"
-"autopep8" = "==1.3.3"
-Babel = "==2.3.4"
-"backports.functools_lru_cache" = "==1.2.1"
-"backports.shutil_get_terminal_size" = "==1.0.0"
-"backports.ssl-match-hostname" = "==3.5.0.1"
-=======
-astroid = "==1.4.8"
-autobahn = "==0.16.0"
-Babel = "==2.3.4"
-"backports.functools-lru-cache" = "==1.2.1"
-"backports.shutil_get_terminal_size" = "==1.0.0"
-"backports.ssl_match_hostname" = "==3.5.0.1"
->>>>>>> addpipenv
-"beautifulsoup4" = "==4.5.1"
-billiard = "==3.3.0.23"
-bleach = "==1.4.3"
-celery = "==3.1.23"
-certifi = "==2016.2.28"
-channels = "==0.17.3"
-chaussette = "==1.3.0"
-circus = "==0.14.0"
-circus-web = "==1.0.0"
-configparser = "==3.5.0"
-"contextlib2" = "==0.5.5"
-<<<<<<< HEAD
-coreapi = "==2.3.3"
-coreschema = "==0.0.4"
-=======
->>>>>>> addpipenv
-coverage = "==4.0.2"
-daphne = "==0.15.0"
-decorator = "==4.0.10"
-Django = "==1.9.7"
-django-allauth = "==0.25.2"
-django-appconf = "==1.0.2"
-django-bootstrap-pagination = "==1.6.1"
-django-ckeditor = "==5.1.1"
-<<<<<<< HEAD
-django-compressor = "==2.1"
-=======
-django_compressor = "==2.1"
->>>>>>> addpipenv
-django-countries = "==4.0"
-django-dbbackup = "==3.1.3"
-django-easy-timezones = "==0.7.0"
-django-el-pagination = "==3.0.1"
-django-filebrowser = "==3.7.2"
-<<<<<<< HEAD
-django-filter = "==1.1.0"
-=======
->>>>>>> addpipenv
-django-flat-responsive = "==1.0.0"
-django-forms-bootstrap = "==3.0.1"
-django-grappelli = "==2.8.2"
-django-guardian = "==1.4.5"
-django-markdown = "==0.8.4"
-django-markdown-deux = "==1.0.5"
-django-markdownx = "==1.6.3"
-django-object-actions = "==0.8.2"
-django-phonenumber-field = "==1.1.0"
-"django-recaptcha2" = "==1.0.0"
-django-redis-cache = "==1.6.5"
-django-reset-migrations = "==0.2.0"
-django-simple-history = "==1.8.1"
-django-tinymce = "==2.4.0"
-django-user-accounts = "==2.0.0"
-django-versatileimagefield = "==1.5"
-<<<<<<< HEAD
-django-webpack-loader = "==0.5.0"
-django-websocket-redis = "==0.4.6"
-djangorestframework = "==3.7.3"
-"enum34" = "==1.1.6"
-"flake8" = "==3.5.0"
-=======
-django-websocket-redis = "==0.4.6"
-"enum34" = "==1.1.6"
->>>>>>> addpipenv
-flower = "==0.9.1"
-futures = "==3.0.5"
-"geoip2" = "==2.4.0"
-gevent = "==1.1.2"
-greenlet = "==0.4.10"
-"html5lib" = "==0.9999999"
-"httplib2" = "==0.9.2"
-iowait = "==0.2"
-ipaddress = "==1.0.14"
-ipython = "==5.1.0"
-ipython_genutils = "==0.1.0"
-"iso3166" = "==0.7"
-isort = "==4.2.5"
-<<<<<<< HEAD
-itypes = "==1.1.0"
-"Jinja2" = "==2.10"
-jsonfield = "==1.0.3"
-kombu = "==3.0.35"
-lazy-object-proxy = "==1.2.2"
-Mako = "==1.0.6"
-=======
-jsonfield = "==1.0.3"
-kombu = "==3.0.35"
-lazy-object-proxy = "==1.2.2"
-mako = "==1.0.6"
->>>>>>> addpipenv
-Markdown = "==2.6.6"
-"markdown2" = "==2.3.1"
-MarkupSafe = "==0.23"
-maxminddb = "==1.2.1"
-<<<<<<< HEAD
-mccabe = "==0.6.1"
-msgpack-python = "==0.4.8"
-oauthlib = "==2.0.0"
-"pathlib2" = "==2.1.0"
-"pep8" = "==1.7.1"
-=======
-mccabe = "==0.5.2"
-msgpack-python = "==0.4.8"
-oauthlib = "==2.0.0"
-"pathlib2" = "==2.1.0"
->>>>>>> addpipenv
-pexpect = "==4.2.1"
-phonenumberslite = "==7.4.4"
-pickleshare = "==0.7.4"
-piexif = "==1.0.8"
-Pillow = "==3.3.1"
-prompt_toolkit = "==1.0.8"
-psutil = "==5.0.1"
-"psycopg2" = "==2.6.2"
-ptyprocess = "==0.5.1"
-<<<<<<< HEAD
-pycodestyle = "==2.3.1"
-pyflakes = "==1.6.0"
-pygeoip = "==0.3.2"
-Pygments = "==2.1.3"
-PyJWT = "==1.4.0"
-pylint = "==1.7.4"
-python-bitcoinrpc = "==1.0"
-python_http_client = "==1.2.3"
-=======
-pygeoip = "==0.3.2"
-Pygments = "==2.1.3"
-pyjwt = "==1.4.0"
-python-bitcoinrpc = "==1.0"
-python-http-client = "==1.2.3"
->>>>>>> addpipenv
-python-openid = "==2.2.5"
-pytz = "==2015.7"
-pyzmq = "==16.0.2"
-raven = "==6.0.0"
-rcssmin = "==1.0.6"
-redis = "==2.10.5"
-requests = "==2.10.0"
-requests-oauthlib = "==0.7.0"
-rjsmin = "==1.0.12"
-sendgrid = "==2.2.1"
-sendgrid-django = "==2.0.0"
-simplegeneric = "==0.8.1"
-simplejson = "==3.10.0"
-<<<<<<< HEAD
-singledispatch = "==3.4.0.3"
-=======
->>>>>>> addpipenv
-six = "==1.10.0"
-smtpapi = "==0.3.1"
-stripe = "==1.46.0"
-tomako = "==0.1.0.post1"
-"tornadio2" = "==0.0.3"
-tornado = "==4.2"
-traitlets = "==4.3.1"
-tweepy = "==3.5.0"
-twilio = "==5.6.0"
-<<<<<<< HEAD
-Twisted = "==16.4.1"
-txaio = "==2.5.1"
-unicodecsv = "==0.14.1"
-uritemplate = "==3.0.0"
-=======
-twisted = "==16.4.1"
-txaio = "==2.5.1"
-unicodecsv = "==0.14.1"
->>>>>>> addpipenv
-wcwidth = "==0.1.7"
-wrapt = "==1.10.8"
-"zope.interface" = "==4.3.2"
+amqp = "*"
+anyjson = "*"
+asgi-redis = "*"
+asgiref = "*"
+astroid = "*"
+autobahn = "*"
+"autopep8" = "*"
+Babel = "*"
+"backports.functools_lru_cache" = "*"
+"backports.shutil_get_terminal_size" = "*"
+"backports.ssl-match-hostname" = "*"
+"beautifulsoup4" = "*"
+billiard = "*"
+bleach = "*"
+celery = "*"
+certifi = "*"
+channels = "*"
+chaussette = "*"
+circus = "*"
+circus-web = "*"
+configparser = "*"
+"contextlib2" = "*"
+coreapi = "*"
+coreschema = "*"
+coverage = "*"
+daphne = "*"
+decorator = "*"
+Django = "*"
+django-allauth = "*"
+django-appconf = "*"
+django-bootstrap-pagination = "*"
+django-ckeditor = "*"
+django-compressor = "*"
+django-countries = "*"
+django-dbbackup = "*"
+django-easy-timezones = "*"
+django-el-pagination = "*"
+django-filebrowser = "*"
+django-filter = "*"
+django-flat-responsive = "*"
+django-forms-bootstrap = "*"
+django-grappelli = "*"
+django-guardian = "*"
+django-markdown = "*"
+django-markdown-deux = "*"
+django-markdownx = "*"
+django-object-actions = "*"
+django-phonenumber-field = "*"
+"django-recaptcha2" = "*"
+django-redis-cache = "*"
+django-reset-migrations = "*"
+django-simple-history = "*"
+django-tinymce = "*"
+django-user-accounts = "*"
+django-versatileimagefield = "*"
+django-webpack-loader = "*"
+django-websocket-redis = "*"
+djangorestframework = "*"
+"enum34" = "*"
+"flake8" = "*"
+flower = "*"
+futures = "*"
+"geoip2" = "*"
+gevent = "*"
+greenlet = "*"
+"html5lib" = "*"
+"httplib2" = "*"
+iowait = "*"
+ipaddress = "*"
+ipython = "*"
+ipython_genutils = "*"
+"iso3166" = "*"
+isort = "*"
+itypes = "*"
+"Jinja2" = "*"
+jsonfield = "*"
+kombu = "*"
+lazy-object-proxy = "*"
+Mako = "*"
+Markdown = "*"
+"markdown2" = "*"
+MarkupSafe = "*"
+maxminddb = "*"
+mccabe = "*"
+msgpack-python = "*"
+oauthlib = "*"
+"pathlib2" = "*"
+"pep8" = "*"
+pexpect = "*"
+phonenumberslite = "*"
+pickleshare = "*"
+piexif = "*"
+Pillow = "*"
+prompt_toolkit = "*"
+psutil = "*"
+"psycopg2" = "*"
+ptyprocess = "*"
+pycodestyle = "*"
+pyflakes = "*"
+pygeoip = "*"
+Pygments = "*"
+PyJWT = "*"
+pylint = "*"
+python-bitcoinrpc = "*"
+python_http_client = "*"
+python-openid = "*"
+pytz = "*"
+pyzmq = "*"
+raven = "*"
+rcssmin = "*"
+redis = "*"
+requests = "*"
+requests-oauthlib = "*"
+rjsmin = "*"
+sendgrid = "*"
+sendgrid-django = "*"
+simplegeneric = "*"
+simplejson = "*"
+singledispatch = "*"
+six = "*"
+smtpapi = "*"
+stripe = "*"
+tomako = "*"
+"tornadio2" = "*"
+tornado = "*"
+traitlets = "*"
+tweepy = "*"
+twilio = "*"
+Twisted = "*"
+txaio = "*"
+unicodecsv = "*"
+uritemplate = "*"
+wcwidth = "*"
+wrapt = "*"
+"zope.interface" = "*"
 
 [dev-packages]
 
